<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Successful">

    <View
        android:id="@+id/layer_2"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="258dp"
        android:background="@drawable/la"
        />

    <TextView
        android:id="@+id/successful"
        android:layout_width="137dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="435dp"
        android:text="@string/successful"
        android:textAppearance="@style/successful"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.27sp"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/your_loan_r"
        android:layout_width="291dp"
        android:layout_height="22dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="478dp"
        android:text="@string/your_loan_r"
        android:textAppearance="@style/your_loan_r"
        android:lineSpacingExtra="5sp"
        android:gravity="center_horizontal|center_vertical"
        />

    <Button
        android:id="@+id/group_3"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/go_to_home"
        android:layout_marginTop="752dp"
        android:textSize="18dp"
        android:backgroundTint="@color/blue"
        />


</RelativeLayout>
</ScrollView>